--- a/Module04/Lecture/In-Class-Stats-Notebook_COMPLETED.ipynb
+++ b/Module04/Lecture/In-Class-Stats-Notebook_COMPLETED.ipynb
@@ -2350,7 +2350,7 @@
     "\n",
     "fig2 = plt.figure('Dice Roll PMF')\n",
     "ax2 = fig2.add_axes([0.1,0.1,0.8,0.8])\n",
-    "ax2.hist(outcome, bins=n+1, range=(0,n+1), density=True);\n",
+    "ax2.hist(outcome2, bins=n+1, range=(0,n+1), density=True, rwidth=0.9);\n",
     "ax2.set_xlabel('Number of 4s')\n",
     "\n",
     "ax = plt.gca(); # get axis handle"
